[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel", "setuptools-scm",]

[project]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: MIT License",
	"License :: OSI Approved :: Apache Software License",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Database",                                                                            
	"Topic :: Home Automation",
	"Topic :: System :: Distributed Computing",
]
dependencies = [
	"asyncclick > 7.99",        
	"trio >= 0.22",
	"anyio >= 4",
	"range_set >= 0.2",                                                          
	"attrs >= 22",
	"asyncserf >= 0.16",   
	"asyncactor >= 0.24",
	"asyncscope >= 0.10.4",   
	"jsonschema >= 2.5",
	"ruyaml >= 0.89",
	# "argon2 >= 18.3",
	"PyNaCl >= 1.3",
	"moat-lib-diffiehellman ~= 0.13.1.6",                                           
	"psutil",
	"simpleeval >= 0.9.10",                                            
	"moat-mqtt ~= 0.39.4",
	"moat-util >= 0.51.3",
	"exceptiongroup; python_version<'3.11'",
]
dynamic = [ "version",]
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-kv"
description = "A distributed no-master key-value store"
readme = "README.rst"
[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.optional-dependencies]
dev = [
    "moat-src >= 0.5.0"
]

[project.license]
file = "LICENSE.txt"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat-kv"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN","PTH","PERF", "D105", "D107","A003","S101","RUF001","RUF002","PLW1514", "D2","D3","D4","T2","FBT","TRY003","EM10","PLR","C","RET50","TD","FIX","N","ERA","BLE001","COM812","ISC001"]

preview = true
explicit-preview-rules = true

line-length = 99

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id","help"]

[tool.ruff.isort]
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]
section-order = ["future","standard-library","first-party","third-party","moat","local-folder","upy","typing"]
extra-standard-library = ["pytest", "anyio"]
force-to-top = ["moat.util"]

[tool.ruff.isort.sections]
"moat" = ["moat"]
"upy" = ["micropython", "machine", "esp"]
"typing" = ["typing"]

[tool.flake8]
max-line-length = 99
ignore = [ "F841", "F401", "E731", "E502", "E402", "E127", "E123", "W503", "E231", "E203", "E501" ]

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.setuptools]
packages = [ "moat.kv",]
[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]

[tool.black]
line-length = 99

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,check

[testenv]
setenv = 
    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
deps = 
    anyio
    asyncwebsockets
    asyncclick
    asyncscope
    trio
    pytest
commands = 
    python3 -mpytest tests/

[testenv:check]
commands = 
    pylint moat tests
    flake8p moat tests
    black --check moat tests
deps = 
    pytest
    pylint
    black
    flake8-pyproject
    flake8

"""

[tool.pytest]
filterwarnings = [
    "error",
    # This is a Heisenbug, triggered by some garbage collection problem  
    # that defies analysis.
    "ignore:unclosed:ResourceWarning",
]
addopts = "--verbose"

[tool.pylint]
[tool.pylint.messages_control]
disable = "wrong-import-order,ungrouped-imports,too-many-nested-blocks,use-dict-literal,unspecified-encoding,too-many-statements,too-many-return-statements,too-many-locals,too-many-instance-attributes,too-many-branches,too-many-arguments,too-few-public-methods,superfluous-parens,no-else-return,no-else-continue,invalid-name,fixme"

[tool.moat]
